Numbering issue fix